syntax = "proto3";

option go_package = "github.com/rahulhegde/goplay/gobasic/grpcprotobufplay";

import "google/protobuf/timestamp.proto";

message Person {
    string name = 1;
    int32 id = 2;
    string email = 3;

    enum PhoneType {
        CELL = 0;
        HOME = 1;
        WORK = 2;
    }

    message PhoneNumber {
        string number = 1;
        PhoneType type = 2;
    }

    repeated PhoneNumber phones = 4;

    google.protobuf.Timestamp last_updated = 5;
}

// out address book 
message AddressBook {
    repeated Person person = 1;
}